--- a/Website/WebClient/src/index.css
+++ b/Website/WebClient/src/index.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background-color: rgb(105, 101, 101);
+  background-image: linear-gradient(to right, #F2F0E9 0%, #eef1f5 100%);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
